--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,37 @@
 .read-the-docs {
   color: #888;
 }
+
+input{
+  width: 200px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  margin-bottom: 1rem;
+  margin-right: 5px;
+}
+.citylist{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  flex-direction: column;
+  @media (min-width: 600px) {
+    flex-direction: row;
+  }
+  .city {
+    margin: 1rem;
+    width: 200px;
+    height: 400px;
+    border-radius: 10px;
+    overflow: hidden;
+    transition: transform 0.25s;
+    background-color: blueviolet;
+    &:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+      background-color: blue
+    }
+  }
+}
